--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
+<% provide(:title, "Help") %>
+<!DOCTYPE html>
+<html>
+	<body>
 <h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<p>Go <a href="http://www.railstutorial.org/">here</a>for help.</p>
+</body>
+</html>
