--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<h1>StaticPages#home</h1>
-		<p>Honey I'm home!</p>
-	</body>
+  <body>
+    <h1>StaticPages#home</h1>
+    <p>Honey I'm home!</p>
+ 
+    <div class="center jumbotron">
+      <h1>Welcome to the Sample App</h1>
+      <h2>This is the home page for the
+	      <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.</h2>
+<%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    </div>
+
+    <%= link_to image_tag("rails.png", alt: "Rails logo"),
+			    'http://rubyonrails.org/' %>
+ </body>
 </html>
